# mirte_gazebo

./: .gitignore  CMakeLists.txt  README.md  frames.gv  mirte_gazebo.rviz  mirte_gazebo2.rviz  package.xml  setup.py  sources.repos  test.txt
.github/workflows/: cpp-check.yml  python-check.yml  xmllint.yaml  yamlfmt.yml
config/: diff_drive.yaml  gazebo_pid.yaml  gazebo_ros_control_params.yaml  joint_state.yaml  mirte_diff_drive.yaml  mirte_dimensions.yaml  top_view.config  twist_mux.yaml
launch/: barrels_mirte.launch  depth_proc.launch  gazebo_all.launch  gazebo_all.launch.xml  gazebo_duckietown_world.launch  gazebo_duckietown_world.launch.xml  gazebo_duckietown_world_generated.launch  gazebo_duckietown_world_generated.launch.xml  gazebo_empty_world.launch  gazebo_empty_world.launch.xml  gazebo_mirte_diff_drive.launch.py  gazebo_mirte_master_empty.launch.py  gazebo_mirte_master_empty.launch.xml  gazebo_mirte_master_navigation.launch.py  gazebo_mirte_pioneer_robocupjunior.launch.xml  gazebo_mirte_world_generated.launch.xml  generate_world.launch  generate_world.launch.xml  mirte_rviz.launch  mirte_rvizgaz.launch  route_mirte.launch  rsp_lab3.launch  rsp_lab3.launch.xml  rsp_lab3_generated.launch  rsp_lab3_generated.launch.xml  rsp_lab4.launch  rsp_lab4.launch.xml  rsp_lab4_generated.launch  rsp_lab4_generated.launch.xml  rsp_lab4_xacro.launch.xml  simulation_barrel_world.launch  spawn_duckietown.launch  spawn_mirte.launch  spawn_mirte.launch.xml  spawn_mirte_barrels.launch  spawn_mirte_master.launch.xml  spawn_mirte_pioneer.launch.xml
launch/inc/: gazebo_world.launch.xml
maps/: README.md  barrels.yaml  rcj.yaml  route.yaml  routeE.yaml
media/materials/scripts/: duckietown.material  plane.material  robocupjunior.material
media/materials/textures/: README.txt
meshes/: lidar.stl  mirte_base.stl  mirte_base_coll.stl
models/3way/meshes/: 3way.mtl
models/3way_left_1/meshes/: 3way_left_1.mtl
models/3way_left_2/meshes/: 3way_left_2.mtl
models/3way_right_1/meshes/: 3way_right_1.mtl
models/4way/meshes/: 4way.mtl
models/4way_1/meshes/: 4way_1.mtl
models/asphalt_1/meshes/: asphalt_1.mtl
models/barrier/: model.sdf
models/barrier_orig/: model.config  model.sdf
models/big_gap/meshes/: big_gap.mtl
models/black_tile/meshes/: black_tile.mtl
models/building/: model.config  model.sdf
models/bus/: model.config  model.sdf
models/bus/meshes/: bus.mtl
models/circle_corner/meshes/: circle_corner.mtl
models/cone/: model.config  model.sdf
models/cone/meshes/: cone.mtatl  cone.mtl
models/crossing/meshes/: crossing.mtl
models/curve/meshes/: curve.mtl
models/curve_left_1/meshes/: curve_left_1.mtl
models/curve_left_3/meshes/: curve_left_3.mtl
models/curve_left_4/meshes/: curve_left_4.mtl
models/curve_right_1/meshes/: curve_right_1.mtl
models/duckie/: model copy.sdf  model.config  model.sdf
models/duckiebot/: model.config  model.sdf
models/empty/meshes/: empty.mtl
models/floor/meshes/: floor.mtl
models/floor_1/meshes/: floor_1.mtl
models/floor_tiles_white/meshes/: floor_tiles_white.mtl
models/grass_1/meshes/: grass_1.mtl
models/grass_2/meshes/: grass_2.mtl
models/house/: model.config  model.sdf
models/mirte/meshes/: wheel.stl
models/mirte_base/: mirte_base.mtl
models/person_standing/: model.config  model.sdf  readme.md
models/realsense_camera/: model.config
models/realsense_camera/meshes/: realsense.dae  realsense.mtl
models/roundabout_corner/meshes/: roundabout_corner.mtl
models/roundabout_square/meshes/: roundabout_square.mtl
models/sign_4_way_intersect/: model.config  model.sdf
models/sign_T_intersect/: model.config  model.sdf
models/sign_blank/: model.config  model.sdf
models/sign_do_not_enter/: model.config  model.sdf
models/sign_duck_crossing/: model.config  model.sdf
models/sign_left_T_intersect/: model.config  model.sdf
models/sign_no_left_turn/: model.config  model.sdf
models/sign_no_right_turn/: model.config  model.sdf
models/sign_oneway_left/: model.config  model.sdf
models/sign_oneway_right/: model.config  model.sdf
models/sign_pedestrian/: model.config  model.sdf
models/sign_right_T_intersect/: model.config  model.sdf
models/sign_stop/: model.config  model.sdf
models/sign_t_light_ahead/: model.config  model.sdf
models/sign_yield/: model.config  model.sdf
models/small_gap/meshes/: small_gap.mtl
models/square_corner/meshes/: square_corner.mtl
models/straight/meshes/: straight.mtl
models/straight_1/meshes/: straight_1.mtl
models/straight_line/meshes/: straight_line.mtl
models/stucco/meshes/: stucco.mtl
models/tile/: tile.stl.blend  tile.stl.blend1
models/trafficlight/: model.config  model.sdf
models/tree/: model.config  model.sdf
models/truck/: model.config  model.sdf
models/wheel/: wheel.mtl
out_world/: person.sdf  sun_top.sdf
params/: ros_gz_bridge.yaml
rviz/: barrel_world.rviz  demo.rviz  lab3.rviz  line_world.rviz  rsp_lab4.rviz
scripts/: buildMap.py  buildMap.sh  cones.tmp  generateCones.js  generateConesRoute.js  generateModels.js  mapEncoder.py  mapIR.py  mapUltrasonic.py  package-lock.json  package.json  pythonformat.sh  xmlformat.sh  yamlformat.sh
scripts/gen_tiles/: gen.js
src/: convert_encoder.cpp  convert_ir.cpp  convert_ultrasonic.cpp  rotate.cpp
test_pkgs/py_testcam/: package.xml  setup.cfg  setup.py
urdf/: camera.xacro  cylinder.sdf  diffdrive.xacro  doos2.world  duckieModels.xacro  duckietiles.urdf  duckietown.xacro  empty_duckietown.world  includedMacro.xacro  ir.xacro  lab3.world  lab4.world  lidar.xacro  macros.xacro  materials.xacro  mirte.xacro  realsense-RS200.macro.xacro  realsense-depth.xacro  realsense-lidar.xacro  realsense.xacro  ros_control.xacro  static_cam.xacro  tile.xacro  tileWorld.xacro  ultrasonic.xacro  voorbeeld.urdf
urdf/mirte/: README.md  camera.xacro  diffdrive.xacro  ir.xacro  lidar.xacro  macros.xacro  mirte.xacro  realsense-depth.xacro  realsense.xacro
worlds/: barrels.world  doos.world  doos2.world  doos2T.world  lab3.world  lab3_generated.world  lab4.world  lab4_generated.world
(+35 files in other folders)
