<?xml version="1.0"?>
<package format="2">
  <name>mirte_gazebo</name>
  <version>0.0.0</version>
  <description>The mirte_gazebo package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="martin@todo.todo">martin</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>mirte_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>mirte_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mirte_msgs</exec_depend>
  <exec_depend>python-yaml</exec_depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <!-- <build_type>ament_python</build_type> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
