<?xml version="1.0"?>
<package format="2">
  <name>mirte_gazebo</name>
  <version>0.2.0</version>
  <description>Simulation (world and robot) of Mirte for Robot Software Practicals (RO47003)</description>
  <maintainer email="m.a.garzonoviedo@tudelft.nl">Mario Garzon Oviedo</maintainer>
  <maintainer email="a.j.vanhilten@tudelft.nl">Arend-Jan van Hilten</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
